[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "*"
phf = { version = "*", features = ["macros"] }
smallvec = { version = "*", features = ["serde"] }
specs = { version = "*", features = ["serde"] }
specs-derive = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rand = "*"

# [profile.dev]
# opt-level = 1
# overflow-checks = false


[profile.dev.package.macroquad]
opt-level = 3